updated github link

--- a/articles/view/index.html
+++ b/articles/view/index.html
@@ -42,7 +42,7 @@
             </ul>
             <ul>
                 <li><a href="/settings"><i class="fa-solid fa-gear" title="Settings"></i></a></li>
-                <li><a href="https://github.com/actuallyaridan/NeoFreeBird"><i class="fa-brands fa-github"
+                <li><a href="https://github.com/actuallyaridan"><i class="fa-brands fa-github"
                             title="GitHub"></i></a></li>
                 <li><a href="https://twitter.com/actuallyaridan"><i class="fa-brands fa-twitter"
                             title="Twitter"></i></a></li>
@@ -68,7 +68,7 @@
             </ul>
             <ul>
                 <li><a href="/settings"><i class="fa-solid fa-gear" title="Settings"></i></a></li>
-                <li><a href="https://github.com/actuallyaridan/NeoFreeBird"><i class="fa-brands fa-github"
+                <li><a href="https://github.com/actuallyaridan"><i class="fa-brands fa-github"
                             title="GitHub"></i></a></li>
                 <li><a href="https://twitter.com/actuallyaridan"><i class="fa-brands fa-twitter"
                             title="Twitter"></i></a></li>
