--- a/articles/view/index.html
+++ b/articles/view/index.html
@@ -56,7 +56,7 @@
                 <li><a href="/">aridan.net</a></li>
             </ul>
             <ul>
-                <li><button class="noUI" onclick="toggleMenu()"><i class="fa-solid fa-bars"></i></button></li>
+                  <li><button title="Menu" class="noUI" onclick="toggleMenu()"><i class="fa-solid fa-bars"></i></button></li>
             </ul>
         </div>
         <menu class="mobileMenu" id="mobileMenuID">
