--- a/articles/view/index.html
+++ b/articles/view/index.html
@@ -1,7 +1,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">    
+<script src="/src/js/settings.js" async></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="aridan.net">
     <meta name="keywords"
@@ -18,6 +19,7 @@
     <link rel="stylesheet" href="/src/css/settings.css">
     <link rel="stylesheet" href="/src/css/lanyard.css">
     <script src="/src/js/general.js"></script>
+
     <script src="/src/js/displayArticle.js" defer></script>
     <script src="/src/js/lanyard.js" defer></script>
     <script defer="" src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js"
