--- a/src/css/lanyard.css
+++ b/src/css/lanyard.css
@@ -331,6 +331,7 @@ div#loading>div {
 #amActivityState {
     color: var(--paragraph-color);
     margin-top: 12px;
+    margin-right: 6px;
 }
 
 #activityName,
